# IPS

./: .gitignore  BW.ipynb  BrownianMotionMain.py  CMakeLists.txt  ODModule.cpp  OverdampedLangevin.h  README.md  README_ZH.md  draw.ipynb  main.cpp
examples/: 1DOverdampedLangevin.cpp  1D_OL.cpp  IPS.cpp  Langvein_IPS.cpp
include/: IPS.h  Integrator.h  OverdampedLangevin.h  Particles.h  Potential.h  utils.h  vec.h
pybind/: IPSModule.cpp  ODModule.cpp
scripts/: 2D_400.ipynb  BW.ipynb  BrownianMotionMain.py  IPS_bind_2D.ipynb  IPS_draw.ipynb  IPS_draw_2D.ipynb  Langvein_IPS_bind_2D.ipynb  Langvein_IPS_bind_2D_2clusters.ipynb  OL_draw.ipynb  utils.py  wrappers.py  wtw.ipynb  wtw_LJpotential.ipy
scripts/Cluster/: VACF.ipynb
scripts/Cluster_time/: Cluster_time.ipynb
scripts/DBSCAN/: Cluster Formation Time Simulation (usi.py  DBSCAN_Better_ClusterLessThan2.py  DBSCAN_Better_ClusterNumMorethan_2.py
scripts/Deterministic_IPS/: 2D_Hamiltonian.ipynb
scripts/Deterministic_themostat/: NHL.ipynb  Nose_Hoover.ipynb
scripts/Langvein_IPS/: 2D_400.ipynb  2D_Collide.ipynb  2D_Donut.ipynb  Temperture.ipynb  heat_cap.ipynb
scripts/harmonic_oscillator/: harmonic_oscillator.ipynb  helpers.py  langevin_stability.ipynb
scripts/python_sims/: blank.txt  wtw.ipynb
scripts/stability_analysis/: harmonic_oscillator.ipynb  langevin_stability.ipynb
scripts/stationary_convergence/: LD.py  NHD.py  convergence_test.ipynb  physical.py
scripts/stationary_convergence/archive/: convergence_test_4D.py  stationary_convergence.ipynb
